Solve overflow problem

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
     width: 100%;
     padding: 0 20px;
     font-size: 16px;
+    overflow-wrap: anywhere;
 }
 h1,h2,h3,h4,h5,h6{
     font-family:'Playfair Display', sans-serif ;
